Fixed DEV panel layout problems
- Recordings w/o graphics should never show the video player
- Layout options for recordings w/ and w/o graphics should be different
- Set a valid default layout mode based on recording capabilities
- Don't select the Sources tab for layouts that don't dock Sources inside of the secondary toolbar
- Console e2e tests are failing because the test helper methods need to be updated

--- a/src/ui/components/shared/Dropdown.css
+++ b/src/ui/components/shared/Dropdown.css
@@ -2,10 +2,6 @@
   position: relative;
 }
 
-.dropdown-wrapper:hover {
-  cursor: pointer;
-}
-
 .dropdown-wrapper button.secondary {
   padding: 5px 10px 5px 5px;
   background: none;
@@ -62,6 +58,14 @@
   top: 40px;
 }
 
+.dropdown-container .inactive-row {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  right: -4px;
+  top: 48px;
+}
+
 .dropdown-container .row {
   display: flex;
   align-items: center;
@@ -69,6 +73,7 @@
   border-radius: 4px;
   right: -4px;
   top: 48px;
+  cursor: pointer;
 }
 
 .dropdown-container .row-flat {
